# doublezero

./: .cspell-ignore  .cursorrules  .dockerignore  .gitattributes  .gitignore  .golangci.yaml  .goreleaser.activator.yaml  .goreleaser.agent.yaml  .goreleaser.client.yaml  .goreleaser.controller.yaml  .goreleaser.eosagent.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  cspell.json  go.mod  go.sum  pr-strategy-bgp-status.md
activator/: Cargo.toml  Makefile  README.md  build.rs  doublezero-activator.service
activator/packaging/scripts/deb/: postinstall.sh  postremove.sh  preremove.sh
activator/src/: accesspass_monitor.rs  activator.rs  activator_metrics.rs  constants.rs  idallocator.rs  influxdb_metrics_service.rs  ipblockallocator.rs  main.rs  metrics_service.rs  migrate.rs  processor.rs  test_helpers.rs  tests.rs  user_monitor.rs  utils.rs
activator/src/process/: accesspass.rs  device.rs  exchange.rs  facility.rs  iface_mgr.rs  link.rs  location.rs  metro.rs  mod.rs  multicastgroup.rs  topology.rs  tunnel.rs  user.rs  utils.rs
activator/src/states/: devicestate.rs  mod.rs
activator/src/tenants/: solana.rs
client/doublezero/: Cargo.toml  Makefile  README.md  build.rs  dz-testnet.sh  test  test-devnet.sh  test.sh
client/doublezero-geolocation-cli/: Cargo.toml
client/doublezero-geolocation-cli/src/: main.rs
client/doublezero-geolocation-cli/src/cli/: command.rs  config.rs  mod.rs  probe.rs  user.rs
client/doublezero/config/: config.mainnet-beta.yml
client/doublezero/src/: command.rs  config.rs  device.rs  dzd_latency.rs  exchange.rs  globalconfig.rs  helpers.rs  main.rs  requirements.rs  routes.rs  servicecontroller.rs  tests.rs  tunnel.rs  user.rs
client/doublezero/src/cli/: accesspass.rs  command.rs  config.rs  contributor.rs  device.rs  edge.rs  exchange.rs  globalconfig.rs  globalstate.rs  link.rs  location.rs  metro.rs  mod.rs  multicast.rs  multicastgroup.rs  permission.rs  resource.rs  sentinel.rs  tenant.rs  user.rs
client/doublezero/src/command/: account.rs  balance.rs  config.rs  connect.rs  disable.rs  disconnect.rs  edge.rs  enable.rs  export.rs  getaccount.rs  helpers.rs  init.rs  latency.rs  mod.rs  multicast.rs  routes.rs  setconfig.rs  status.rs  subscribe.rs  util.rs
config/: Cargo.toml  constants.go  env.go  env_test.go  solana.go
config/src/: constants.rs  env.rs  lib.rs
crates/borsh-incremental/: Cargo.toml  README.md
crates/borsh-incremental/derive/: Cargo.toml
crates/borsh-incremental/examples/: basic.rs
crates/borsh-incremental/src/: lib.rs
crates/borsh-incremental/tests/: basic.rs
crates/doublezero-cli-core/: Cargo.toml
crates/doublezero-cli-core/src/: context.rs  error.rs  formatters.rs  lib.rs  logging.rs  requirements.rs  testing.rs  validators.rs
crates/doublezero-daemon-cli/: Cargo.toml
crates/doublezero-daemon-cli/src/: cli.rs  client.rs  connect.rs  disable.rs  disconnect.rs  enable.rs  helpers.rs  latency.rs  ledger.rs  lib.rs  multicast.rs  requirements.rs  routes.rs  status.rs
crates/doublezero-geolocation-cli/: Cargo.toml
crates/doublezero-geolocation-cli/src/: cli.rs  client.rs  init.rs  lib.rs
crates/doublezero-geolocation-cli/src/probe/: add_parent.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  remove_parent.rs  update.rs
crates/doublezero-geolocation-cli/src/user/: add_target.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  remove_target.rs  set_result_destination.rs  update.rs  update_payment_status.rs
crates/doublezero-serviceability-instruction/: Cargo.toml
crates/doublezero-serviceability-instruction/src/: accesspass.rs  allowlist.rs  common.rs  contributor.rs  device.rs  exchange.rs  feed.rs  globalconfig.rs  globalstate.rs  index.rs  lib.rs  link.rs  location.rs  migrate.rs  multicastgroup.rs  permission.rs  resource.rs  tenant.rs  topology.rs  user.rs
crates/sentinel/: Cargo.toml
crates/sentinel/src/: dz_ledger_reader.rs  dz_ledger_writer.rs  error.rs  lib.rs  main.rs  multicast_create.rs  multicast_find.rs  multicast_publisher.rs  nearest_device.rs  output.rs  settings.rs  tunnel_endpoint.rs  validator_metadata_reader.rs
e2e/docker/ledger/fork-accounts/: Cargo.toml
sdk/borsh-incremental/python/: pyproject.toml
sdk/borsh-incremental/python/borsh_incremental/: __init__.py  reader.py
sdk/revdist/python/: pyproject.toml
sdk/revdist/python/revdist/: pda.py  (+8 more)
sdk/serviceability/python/: pyproject.toml
sdk/telemetry/python/: pyproject.toml
smartcontract/cli/: Cargo.toml  README.md
smartcontract/cli/src/: account.rs  accounts.rs  address.rs  balance.rs  checkversion.rs  connect.rs  disconnect.rs  doublezerocommand.rs  export.rs  formatters.rs  geoclicommand.rs  helpers.rs  init.rs  keygen.rs  latency.rs  lib.rs  log.rs  logcommand.rs  migrate.rs  poll_for_activation.rs  pool_for_activation.rs  requirements.rs  serializer.rs  status.rs  subscribe.rs  tests.rs  util.rs  validators.rs  version.rs
smartcontract/doublezero-payment-tracker/: Cargo.toml
smartcontract/doublezero-payment-tracker/src/: lib.rs  rewards.rs
smartcontract/payment-tracker/: Cargo.toml
smartcontract/program-common/: Cargo.toml
smartcontract/program-common/src/: compat_deserialize.rs  create_account.rs  lib.rs  normalize_account_code.rs  resize_account.rs  serializer.rs  validate_iface.rs
smartcontract/programs/common/: Cargo.toml
smartcontract/programs/doublezero-geolocation/: Cargo.toml
smartcontract/programs/doublezero-record/: Cargo.toml  README.md
smartcontract/programs/doublezero-scheduler/: Cargo.toml
smartcontract/programs/doublezero-serviceability/: Cargo.toml  DEPLOYMENT.md  INSTRUCTION_GUIDELINES.md  PERMISSION.md  PROVISIONING.md  README.md  TENANT_README.md
smartcontract/programs/doublezero-telemetry/: Cargo.toml  README.md  build.rs
smartcontract/programs/dz-sla-program/: ----deploy-devnet.sh  ---create-new-keypair.sh  -deploy-devnet.sh  Cargo.toml  DEPLOYMENT.md  README.md  deploy-devnet.sh  publish-idl.sh  test-init.sh  test-localnet.sh  update.py  words.py
smartcontract/sdk/rs/: Cargo.toml  README.md
(+3733 files in other folders)
