[workspace]
members = [
    "client/doublezero",
    "activator",
    "controlplane/doublezero-admin",
    "smartcontract/cli",
    "smartcontract/sdk/rs",
    "smartcontract/programs/dz-sla-program",
]
default-members = []
exclude = []
resolver = "2"

[workspace.package]
authors = ["Malbec Labs <dev@malbeclabs.com>"]
rust-version = "1.87"
readme = "README.md"
edition = "2021"
description = "Malbec Labs DoubleZero"
homepage = "https://github.com/malbeclabs/doublezero"
license = "Apache-2.0"
repository = "https://github.com/malbeclabs/doublezero"

[workspace.dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5.7"
chrono = "0.4"
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
console = "0.15.11"
directories-next = "2.0.0"
dirs-next = "2.0.0"
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
hyper = { version = "0.14", features = ["client", "http1", "tcp", "stream"] }
hyperlocal = { version = "0.8" }
ipnetwork = "0.21.1"
indicatif = "0.17.11"
lazy_static = "1.5.0"
mockall = "^0.13"
prettytable-rs = "0.10.0"
serde = "1.0.218"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
solana-account-decoder = "2.2.7"
solana-client = "2.2.7"
solana-program = "2.2.1"
solana-pubsub-client = "2.2.7"
solana-program-test = "2.2.7"
solana-rpc-client-api = "2.2.7"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }

# Dependencies from this workspace
doublezero = { path = "client/doublezero" }
doublezero_admin = { path = "controlplane/doublezero-admin" }
doublezero_cli = { path = "smartcontract/cli" }
doublezero_sdk = { path = "smartcontract/sdk/rs" }
doublezero-sla-program = { path = "smartcontract/programs/dz-sla-program" }
