[workspace]
members = [
    "client/doublezero",
    "activator",
    "controlplane/doublezero-admin",
    "smartcontract/cli",
    "smartcontract/sdk/rs",
    "smartcontract/programs/doublezero-serviceability",
    "smartcontract/programs/doublezero-telemetry",
    "smartcontract/doublezero-payment-tracker",
    "smartcontract/program-common",
]
default-members = []
exclude = []
resolver = "2"

[workspace.package]
authors = ["Malbec Labs <dev@malbeclabs.com>"]
readme = "README.md"
edition = "2021"
description = "Malbec Labs DoubleZero"
homepage = "https://github.com/malbeclabs/doublezero"
license = "Apache-2.0"
repository = "https://github.com/malbeclabs/doublezero"
version = "0.2.2"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
# NOTE: We need to maintain base64 version 0.22.1
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
bitvec = "1"
borsh = "1"
byteorder = "1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
console = "0"
ctor = "0"
directories-next = "2"
dirs-next = "2"
env_logger = "0"
eyre = "0"
futures = "0"
futures-util = "0"
http = "1"
http-body-util = "0"
hyper = "1"
hyper-util = "0"
hyperlocal = { version = "0" }
indexmap = "2"
indicatif = "0"
influxdb2 = "0"
influxdb2-derive = "0"
influxdb2-structmap = "0"
ipnetwork = "0"
log = "0"
mockall = "0"
serde = "1"
serde_json = "1"
serde_yaml = "0"
solana-account-decoder = "2.2.7"
solana-client = "2.2.7"
solana-program = "2.2.1"
solana-program-test = "2.2.7"
solana-pubsub-client = "2.2.7"
solana-rpc-client-api = "2.2.7"
solana-sdk = "2.2.2"
solana-system-interface = "1.0.0"
solana-transaction-status = "2.2.7"

tabled = "0"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Dependencies from this workspace
doublezero = { path = "client/doublezero" }
doublezero_admin = { path = "controlplane/doublezero-admin" }
doublezero_cli = { path = "smartcontract/cli" }
doublezero_sdk = { path = "smartcontract/sdk/rs" }
doublezero-serviceability = { path = "smartcontract/programs/doublezero-serviceability" }
doublezero-program-common = { path = "smartcontract/program-common" }
