[workspace]
members = [
    "client/doublezero",
    "activator",
    "config",
    "controlplane/doublezero-admin",
    "smartcontract/cli",
    "smartcontract/sdk/rs",
    "smartcontract/programs/doublezero-record",
    "smartcontract/programs/doublezero-serviceability",
    "smartcontract/programs/doublezero-telemetry",
    "smartcontract/programs/doublezero-geolocation",
    "smartcontract/programs/common",
    "e2e/docker/ledger/fork-accounts",
]
default-members = []
exclude = [
    "sdk/revdist/testdata/fixtures/generate-fixtures",
    "sdk/serviceability/testdata/fixtures/generate-fixtures",
    "sdk/telemetry/testdata/fixtures/generate-fixtures",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
authors = ["Malbec Labs <dev@malbeclabs.com>"]
readme = "README.md"
edition = "2021"
description = "Malbec Labs DoubleZero"
homepage = "https://github.com/malbeclabs/doublezero"
license = "Apache-2.0"
repository = "https://github.com/malbeclabs/doublezero"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
async-trait = "0"
backon = "1"
# NOTE: We need to maintain base64 version 0.22.1
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
bitvec = "1"
borsh = "1"
borsh-incremental = { version = "0" }
bytemuck = { version = "1", features = ["derive"] }
byteorder = "1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
console = "0"
ctor = "0"
directories-next = "2"
dirs-next = "2"
env_logger = "0"
eyre = "0"
futures = "0"
futures-util = "0"
http = "1"
http-body-util = "0"
hyper = "1"
hyper-util = "0"
hyperlocal = { version = "0" }
indexmap = "2"
indicatif = "0"
ipnetwork = "0"
libc = "0"
log = "0"
metrics = "0"
metrics-util = "0"
mockall = "0"
regex = "1"
serde = "1"
serde_bytes = "0"
serde_json = "1"
serde_yaml = "0"
serial_test = "0"
solana-account-decoder = "2.3.1"
solana-client = "2.3.1"
solana-bincode = "2.2.1"
solana-loader-v3-interface = { version = "3.0.0", features = ["serde"] }
solana-program = "2.3.0"
solana-program-test = "2.3.1"
solana-pubsub-client = "2.3.1"
solana-rpc-client-api = "3.0.14"
solana-sdk = "2.3.1"
solana-system-interface = "1.0.0"
solana-transaction-status = "2.3.1"
bitflags = "2"
tabled = "0"
temp-env = "0"
tempfile = "3"
thiserror = "2"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "signal",
] }
doublezero-config = { path = "config" }
doublezero_cli = { path = "smartcontract/cli" }
doublezero-program-common = { path = "smartcontract/programs/common" }
doublezero_sdk = { path = "smartcontract/sdk/rs" }

[workspace.dependencies.doublezero-record]
path = "smartcontract/programs/doublezero-record"
features = ["no-entrypoint"]

[workspace.dependencies.doublezero-serviceability]
path = "smartcontract/programs/doublezero-serviceability"
features = ["no-entrypoint"]

[workspace.dependencies.doublezero-telemetry]
path = "smartcontract/programs/doublezero-telemetry"
features = ["no-entrypoint"]

[workspace.dependencies.doublezero-geolocation]
path = "smartcontract/programs/doublezero-geolocation"
features = ["no-entrypoint"]
