[package]
name = "doublezero-activator"
version = "0.2.2"
edition = "2021"

[dependencies]
bitvec.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
eyre.workspace = true
futures.workspace = true
indexmap.workspace = true
influxdb2.workspace = true
influxdb2-derive.workspace = true
influxdb2-structmap.workspace = true
ipnetwork.workspace = true
log.workspace = true
mockall.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
solana-client.workspace = true
# Dependencies from this workspace
doublezero_sdk.workspace = true
doublezero_cli.workspace = true
doublezero-serviceability.workspace = true


[dev-dependencies]

# Dependencies from this workspace
doublezero-serviceability.workspace = true
