[package]
name = "doublezero-activator"

# Workspace inherited keys
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitvec.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
eyre.workspace = true
futures.workspace = true
indexmap.workspace = true
influxdb2.workspace = true
influxdb2-derive.workspace = true
influxdb2-structmap.workspace = true
ipnetwork.workspace = true
log.workspace = true
metrics.workspace = true
metrics-exporter-prometheus = "0"
mockall.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
solana-client.workspace = true
# Dependencies from this workspace
doublezero-config.workspace = true
doublezero_sdk.workspace = true
doublezero_cli.workspace = true
doublezero-serviceability.workspace = true
doublezero-program-common.workspace = true
