[package]
name = "doublezero-config"

# Workspace inherited keys
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eyre.workspace = true
doublezero_sdk.workspace = true
solana-sdk.workspace = true

[dev-dependencies]
serial_test.workspace = true
