[workspace]

[package]
name = "doublezero"
version = "0.1.0"
edition = "2021"
authors = ["Juan Olveira"]
license = "MIT OR Apache-2.0"
description = "Command line interface to interact with the DZ program."

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
eyre = "0.6.12"
solana-program = "1.18.26"
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-pubsub-client = "1.18.26"
chrono = "0.4"
tokio = { version = "1.44.2", features = ["full"] }
dirs = "6.0.0"
serde_json = "1.0.140"
prettytable-rs = "0.10.0"
serde_yaml = "0.9.34"
serde = "1.0.218"
actix-web = "4.10.2"
awc = "3.5.1"
actix-tls = "3.4.0"
futures = "0.3.31"
actix-service = "2.0.3"
http = "1.3.1"
futures-util = "0.3.31"
indicatif = "0.17.11"
console = "0.15.10"
colored = "2.2.0"
anyhow = "1.0.98"
color-eyre = "0.6.3"

hyper = { version="0.14", features=["client", "http1", "tcp", "stream"] }
hyperlocal = { version="0.8" }


doublezero_sdk = { path = "../../smartcontract/sdk/rs", version = "0.1.0" }
doublezero_cli = { path = "../../smartcontract/cli", version = "0.1.0" }
