[package]
name = "doublezero"
version = "0.2.0"

description = "Command line interface to interact with the DZ program."

# Workspace inherited keys
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyperlocal.workspace = true
indicatif.workspace = true
prettytable-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-pubsub-client.workspace = true
solana-sdk.workspace = true
tokio.workspace = true

# Dependencies from this workspace
doublezero_sdk.workspace = true
doublezero_cli.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
