[package]
name = "doublezero"

description = "Command line interface to interact with the DZ program."

# Workspace inherited keys
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
backon.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyperlocal.workspace = true
indicatif.workspace = true
mockall.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-pubsub-client.workspace = true
solana-sdk.workspace = true
tabled.workspace = true
tokio.workspace = true

# Dependencies from this workspace
doublezero_sdk.workspace = true
doublezero_cli.workspace = true
doublezero-config.workspace = true
doublezero-serviceability.workspace = true
doublezero-program-common.workspace = true

[features]
default-mainnet-beta = ["doublezero_sdk/default-mainnet-beta", "doublezero_cli/default-mainnet-beta"]

[dev-dependencies]
assert_cmd.workspace = true
ctor.workspace = true
tempfile.workspace = true
