[package]
name = "doublezero-cli-core"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doublezero_cli_core"

[dependencies]
bitflags.workspace = true
clap.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-sdk.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

doublezero-config.workspace = true
doublezero-program-common.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
