[package]
name = "doublezero-cli-core"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doublezero_cli_core"

[dependencies]
bitflags.workspace = true
clap.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-sdk.workspace = true
tabled.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

doublezero-config.workspace = true
doublezero-program-common.workspace = true

tokio = { workspace = true, optional = true }

[features]
# Enables `testing` helpers that require an async runtime (e.g. `block_on`).
# Module crates turn this on in their dev-dependencies; keeping tokio optional
# preserves the dependency-light default build.
testing = ["dep:tokio"]

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
