[package]
name = "doublezero-daemon-cli"

# Workspace inherited keys
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doublezero_daemon_cli"

[dependencies]
backon.workspace = true
chrono.workspace = true
clap.workspace = true
eyre.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyperlocal.workspace = true
indicatif.workspace = true
mockall.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-sdk.workspace = true
tabled.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

doublezero-cli-core.workspace = true
doublezero-config.workspace = true
doublezero_sdk.workspace = true

[dev-dependencies]
doublezero-cli-core = { workspace = true, features = ["testing"] }
doublezero-program-common.workspace = true
doublezero-serviceability.workspace = true
tokio.workspace = true
