[workspace]

[package]
name = "doublezero_cli"
version = "0.2.0"
edition = "2021"

[lib]
name = "doublezero_cli"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
eyre = "0.6.12"
solana-program = "2.2.1"
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-pubsub-client = "2.2.7"
chrono = "0.4"
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0.140"
prettytable-rs = "0.10.0"
serde_yaml = "0.9.34"
serde = "1.0.218"
futures = "0.3.31"
http = "1.3.1"
futures-util = "0.3.31"
indicatif = "0.17.11"
console = "0.15.10"
anyhow = "1.0.95"
doublezero_sdk = { path = "../sdk/rs", version = "0.2.0" }
mockall = "^0.13"

[dev-dependencies]
doublezero-sla-program = { path = "../programs/dz-sla-program", version = "0.2.0" }
