[package]
name = "doublezero_cli"
version = "0.2.0"

# Workspace inherited keys
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doublezero_cli"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
indicatif.workspace = true
mockall.workspace = true
prettytable-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-pubsub-client.workspace = true
solana-sdk.workspace = true
tokio.workspace = true

# Dependencies from this workspace
doublezero_sdk.workspace = true

[dev-dependencies]

# Dependencies from this workspace
doublezero-sla-program.workspace = true
