[package]
name = "doublezero_cli"

# Workspace inherited keys
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "doublezero_cli"

[dependencies]
anyhow.workspace = true
ipnetwork.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
indicatif.workspace = true
mockall.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-pubsub-client.workspace = true
solana-sdk.workspace = true
tabled.workspace = true
tokio.workspace = true

# Dependencies from this workspace
doublezero-config.workspace = true
doublezero-program-common.workspace = true
doublezero_sdk.workspace = true
doublezero-serviceability = { workspace = true, features = ["serde"] }

[features]
default-mainnet-beta = ["doublezero_sdk/default-mainnet-beta"]

[dev-dependencies]
serial_test.workspace = true
temp-env.workspace = true
tempfile.workspace = true
