[package]
name = "doublezero_payment_tracker"

description = "Library that tracks payments"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace =  true

[lib]
name = "doublezero_payment_tracker"

[dependencies]
eyre.workspace = true
futures.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types = "2.3.3"
tokio.workspace = true
