[package]
name = "doublezero_payment_tracker"

description = "Library that tracks payments"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace =  true

[lib]
name = "doublezero_payment_tracker"

[dependencies]
async-trait.workspace = true
eyre.workspace = true
futures.workspace = true
http.workspace = true
mockall.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status-client-types.workspace = true
tokio.workspace = true
