[package]
name = "payment_tracker"
version = "0.2.2"

description = "Library that tracks fee payments to validators"

authors.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "payment_tracker"

[dependencies]
anyhow.workspace = true
eyre.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
