[package]
name = "doublezero-program-common"
authors.workspace = true
readme.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
solana-program.workspace = true
solana-system-interface.workspace = true