[package]
name = "doublezero-program-common"
authors.workspace = true
readme.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
borsh.workspace = true
byteorder.workspace = true
ipnetwork.workspace = true
solana-program.workspace = true

[dev-dependencies]
serde_json.workspace = true
