[project]
name = "doublezero-revenue-distribution"
version = "0.0.1"
description = "DoubleZero Revenue Distribution SDK"
requires-python = ">=3.10"
dependencies = [
    "doublezero-borsh-incremental",
    "solana>=0.35",
    "solders>=0.21",
    "httpx>=0.27",
    "base58>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["revdist/tests"]

[tool.hatch.build.targets.wheel]
packages = ["revdist"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
doublezero-borsh-incremental = { path = "../../borsh-incremental/python", editable = true }
