[project]
name = "doublezero-revenue-distribution"
version = "0.0.3"
description = "DoubleZero Revenue Distribution SDK"
requires-python = ">=3.11"
dependencies = [
    "borsh-incremental",
    "solana>=0.40",
    "solders>=0.21",
    "httpx>=0.27",
    "httpx2>=2.5",
    "base58>=2.1",
]

[tool.pytest.ini_options]
testpaths = ["revdist/tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["revdist"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.0",
]

[tool.uv.sources]
borsh-incremental = { path = "../../borsh-incremental/python", editable = true }
