[project]
name = "doublezero-serviceability"
version = "0.0.1"
description = "DoubleZero Serviceability SDK"
requires-python = ">=3.10"
dependencies = [
    "borsh-incremental",
    "solana>=0.35",
    "solders>=0.21",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["serviceability/tests"]

[tool.hatch.build.targets.wheel]
packages = ["serviceability"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
borsh-incremental = { path = "../../borsh-incremental/python", editable = true }
