[project]
name = "doublezero-telemetry"
version = "0.0.1"
description = "DoubleZero Telemetry SDK"
requires-python = ">=3.10"
dependencies = [
    "solana>=0.35",
    "solders>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["telemetry/tests"]

[tool.hatch.build.targets.wheel]
packages = ["telemetry"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
