[package]
name = "doublezero-program-common"

# clippy ignores rust-version.toml
rust-version = "1.84.1" # cargo build-sbf --version

authors.workspace = true
readme.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
borsh.workspace = true
byteorder.workspace = true
ipnetwork.workspace = true
solana-program.workspace = true
solana-system-interface.workspace = true

[dev-dependencies]
serde_json.workspace = true
