[package]
name = "doublezero-geolocation"

# clippy ignores rust-version.toml
rust-version = "1.84.1" # cargo build-sbf --version

# Workspace inherited keys
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
solana-program.workspace = true
doublezero-program-common.workspace = true
doublezero-serviceability.workspace = true
thiserror.workspace = true

[dev-dependencies]
solana-sdk.workspace = true
solana-program-test.workspace = true

[features]
default = []
no-entrypoint = []
serde = ["dep:serde", "dep:serde_bytes"]
