[package]
name = "doublezero-record"

# clippy ignores rust-version.toml
rust-version = "1.84.1" # cargo build-sbf --version

# Workspace inherited keys
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
no-entrypoint = []

[dependencies]
bytemuck.workspace = true
solana-program.workspace = true
solana-system-interface.workspace = true
thiserror.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.solana]
program-id = "dzrecxigtaZQ3gPmt2X5mDkYigaruFR1rHCqztFTvx7"
