[package]
name = "doublezero-serviceability"
version = "0.3.0"

# Workspace inherited keys
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
byteorder.workspace = true
doublezero-program-common.workspace = true
ipnetwork.workspace = true
serde.workspace = true
solana-program.workspace = true
thiserror.workspace = true

[dev-dependencies]
solana-sdk.workspace = true
solana-program-test.workspace = true

[features]
default = []
no-entrypoint = []
